tooling/nargo_cli/tests/snapshots/execution_success/brillig_blake2s/execute__tests__force_brillig_false_inliner_-9223372036854775808_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
bug: Brillig function call isn't properly covered by a manual constraint
  ┌─ src/main.nr:7:16
  │
7 │         assert(blake2s(x) == result);
  │                ---------- This Brillig call's inputs and its return values haven't been sufficiently constrained. This should be done to prevent potential soundness vulnerabilities
  │
  = Call stack:
    1. src/main.nr:7:16
